[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Original/Textures/menu9patch.png" type="Texture" id=1]
[ext_resource path="res://Scenes/FailureScreen/FailureScreen.gd" type="Script" id=2]
[ext_resource path="res://Themes/MainMenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/UI/SoundButton/SoundButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/GameFont48px.tres" type="DynamicFont" id=5]

[node name="FailureScreen" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.611765, 0.611765, 0.470588 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 16
custom_constants/margin_left = 64
custom_constants/margin_bottom = 16

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
margin_left = 64.0
margin_top = 16.0
margin_right = 448.0
margin_bottom = 496.0
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 12
custom_constants/margin_left = 8
custom_constants/margin_bottom = 12

[node name="Control" type="Control" parent="Control/MarginContainer/NinePatchRect/MarginContainer"]
margin_left = 8.0
margin_top = 12.0
margin_right = 376.0
margin_bottom = 468.0

[node name="Title" type="Label" parent="Control/MarginContainer/NinePatchRect/MarginContainer/Control"]
unique_name_in_owner = true
anchor_right = 1.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0.12549, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 5 )
text = "You failed..."
align = 1
autowrap = true

[node name="ButtonsContainer" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect/MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -116.5
margin_top = -168.0
margin_right = 116.5
custom_constants/separation = 24
__meta__ = {
"_edit_group_": true
}

[node name="RestartButton" parent="Control/MarginContainer/NinePatchRect/MarginContainer/Control/ButtonsContainer" instance=ExtResource( 4 )]
margin_right = 233.0
margin_bottom = 36.0
text = "Restart"

[node name="MainMenuButton" parent="Control/MarginContainer/NinePatchRect/MarginContainer/Control/ButtonsContainer" instance=ExtResource( 4 )]
margin_top = 60.0
margin_right = 233.0
margin_bottom = 96.0
text = "Return to Main Menu"

[node name="ExitButton" parent="Control/MarginContainer/NinePatchRect/MarginContainer/Control/ButtonsContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 233.0
margin_bottom = 156.0
text = "Exit Game"

[node name="ConfirmMainMenu" type="ConfirmationDialog" parent="Control"]
margin_left = 64.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 86.0
popup_exclusive = true
window_title = "Confirm"
dialog_text = "Go back to main menu?"

[node name="ConfirmExit" type="ConfirmationDialog" parent="Control"]
margin_left = 64.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 86.0
popup_exclusive = true
window_title = "Confirm"
dialog_text = "Quit the game?"

[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/MarginContainer/Control/ButtonsContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/MarginContainer/Control/ButtonsContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/NinePatchRect/MarginContainer/Control/ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="confirmed" from="Control/ConfirmMainMenu" to="." method="_on_ConfirmMainMenu_confirmed"]
[connection signal="confirmed" from="Control/ConfirmExit" to="." method="_on_ConfirmExit_confirmed"]
